<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"

    tools:context="org.strawberryforum.pollywog.AboutActivity">

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:textStyle="normal|bold" />

    <TextView android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtAbout"
        android:textSize="24sp" />

    <TextView android:id="@+id/textAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:layout_below="@+id/textVersion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="24sp" />

    <TextView android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:layout_below="@+id/textAuthor"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <TextView android:id="@+id/textDisclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:textSize="18sp"
        android:minLines="2"
        android:scrollHorizontally="false"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textEmail"/>

    <Button
        android:text="@string/licence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/btnLicences"
        android:layout_below="@+id/textDisclaimer"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
