<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"

    tools:context="org.strawberryforum.pollywog.MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/apps_btn"
        android:layout_marginStart="27dp"
        android:id="@+id/imgBtnApps"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imgBtnWLAN"
        android:onClick="onClick"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/lock_btn"
        android:id="@+id/imgBtnLock"
        android:layout_marginStart="29dp"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imgBtnApps"
        android:onClick="onClick"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/wlan_btn"
        android:id="@+id/imgBtnWLAN"
        android:background="@null"
        android:layout_marginStart="132dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/debug_btn"
        android:layout_marginStart="29dp"
        android:id="@+id/imgBtnDeveloper"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imgBtnLock"
        android:background="@null"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/txtWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlan"
        android:layout_below="@+id/imgBtnWLAN"
        android:textColor="@color/colorText"
        android:layout_alignStart="@+id/imgBtnWLAN"
        android:layout_toStartOf="@+id/imgBtnApps"
        android:textAlignment="center" />

    <TextView android:id="@+id/textApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appmgr"
        android:layout_below="@+id/imgBtnApps"
        android:textColor="@color/colorText"
        android:layout_alignStart="@+id/imgBtnApps"
        android:layout_toStartOf="@+id/imgBtnLock"
        android:textAlignment="center" />

    <TextView android:id="@+id/textLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lockscrn"
        android:textColor="@color/colorText"
        android:layout_below="@+id/imgBtnLock"
        android:layout_alignStart="@+id/imgBtnLock"
        android:layout_toStartOf="@+id/imgBtnDeveloper"
        android:textAlignment="center" />

    <TextView android:id="@+id/textDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devoptions"
        android:textColor="@color/colorText"
        android:layout_below="@+id/imgBtnDeveloper"
        android:layout_alignEnd="@+id/imgBtnDeveloper"
        android:layout_alignStart="@+id/imgBtnDeveloper"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/resource_btn"
        android:id="@+id/imgBtnResources"
        android:background="@null"
        android:onClick="onClick"
        android:layout_below="@+id/txtWifi"
        android:layout_alignStart="@+id/txtWifi"
        android:layout_marginTop="51dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mtk_btn"
        android:id="@+id/imgBtnEngr"
        android:background="@null"
        android:onClick="onClick"
        android:layout_alignTop="@+id/imgBtnResources"
        android:layout_alignStart="@+id/textApps" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/support_btn"
        android:id="@+id/imgBtnCustHlp"
        android:background="@null"
        android:onClick="onClick"
        android:layout_alignTop="@+id/imgBtnEngr"
        android:layout_alignStart="@+id/textLock" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/about_btn"
        android:id="@+id/imgBtnAbout"
        android:background="@null"
        android:onClick="onClick"
        android:layout_alignTop="@+id/imgBtnCustHlp"
        android:layout_alignStart="@+id/textDeveloper" />

    <TextView
        android:id="@+id/txtResources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resources"
        android:layout_below="@+id/imgBtnResources"
        android:textColor="@color/colorText"
        android:layout_alignStart="@+id/imgBtnResources"
        android:layout_toStartOf="@+id/imgBtnApps"
        android:textAlignment="center" />

    <TextView android:id="@+id/textEngr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mtkengr"
        android:layout_below="@+id/imgBtnEngr"
        android:textColor="@color/colorText"
        android:layout_alignStart="@+id/imgBtnApps"
        android:layout_toStartOf="@+id/imgBtnLock"
        android:textAlignment="center" />

    <TextView android:id="@+id/textSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custhelp"
        android:textColor="@color/colorText"
        android:layout_below="@+id/imgBtnCustHlp"
        android:layout_alignStart="@+id/imgBtnLock"
        android:layout_toStartOf="@+id/imgBtnDeveloper"
        android:textAlignment="center" />

    <TextView android:id="@+id/textAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutTitle"
        android:textColor="@color/colorText"
        android:layout_below="@+id/imgBtnAbout"
        android:layout_alignEnd="@+id/imgBtnDeveloper"
        android:layout_alignStart="@+id/imgBtnDeveloper"
        android:textAlignment="center" />

</RelativeLayout>
